--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>codetalk.dev</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,600"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="bg-theme font-sans theme-light">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
